deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeError 2.log
Determining if the CL_VERSION_2_2 exist failed with the following output:
Change Dir: /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp

Run Build Command(s):/usr/bin/make cmTC_a46ae/fast && /Applications/Xcode.app/Contents/Developer/usr/bin/make -f CMakeFiles/cmTC_a46ae.dir/build.make CMakeFiles/cmTC_a46ae.dir/build
Building C object CMakeFiles/cmTC_a46ae.dir/CheckSymbolExists.c.o
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc  -F/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks  -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk   -o CMakeFiles/cmTC_a46ae.dir/CheckSymbolExists.c.o   -c /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c
/Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c:8:19: error: use of undeclared identifier 'CL_VERSION_2_2'
  return ((int*)(&CL_VERSION_2_2))[argc];
                  ^
1 error generated.
make[1]: *** [CMakeFiles/cmTC_a46ae.dir/CheckSymbolExists.c.o] Error 1
make: *** [cmTC_a46ae/fast] Error 2


File /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c:
/* */
#include </Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/OpenCL.framework/Headers/cl.h>

int main(int argc, char** argv)
{
  (void)argv;
#ifndef CL_VERSION_2_2
  return ((int*)(&CL_VERSION_2_2))[argc];
#else
  (void)argc;
  return 0;
#endif
}
Determining if the CL_VERSION_2_1 exist failed with the following output:
Change Dir: /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp

Run Build Command(s):/usr/bin/make cmTC_b73f5/fast && /Applications/Xcode.app/Contents/Developer/usr/bin/make -f CMakeFiles/cmTC_b73f5.dir/build.make CMakeFiles/cmTC_b73f5.dir/build
Building C object CMakeFiles/cmTC_b73f5.dir/CheckSymbolExists.c.o
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc  -F/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks  -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk   -o CMakeFiles/cmTC_b73f5.dir/CheckSymbolExists.c.o   -c /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c
/Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c:8:19: error: use of undeclared identifier 'CL_VERSION_2_1'
  return ((int*)(&CL_VERSION_2_1))[argc];
                  ^
1 error generated.
make[1]: *** [CMakeFiles/cmTC_b73f5.dir/CheckSymbolExists.c.o] Error 1
make: *** [cmTC_b73f5/fast] Error 2


File /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c:
/* */
#include </Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/OpenCL.framework/Headers/cl.h>

int main(int argc, char** argv)
{
  (void)argv;
#ifndef CL_VERSION_2_1
  return ((int*)(&CL_VERSION_2_1))[argc];
#else
  (void)argc;
  return 0;
#endif
}
Determining if the CL_VERSION_2_0 exist failed with the following output:
Change Dir: /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp

Run Build Command(s):/usr/bin/make cmTC_bb1f5/fast && /Applications/Xcode.app/Contents/Developer/usr/bin/make -f CMakeFiles/cmTC_bb1f5.dir/build.make CMakeFiles/cmTC_bb1f5.dir/build
Building C object CMakeFiles/cmTC_bb1f5.dir/CheckSymbolExists.c.o
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc  -F/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks  -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk   -o CMakeFiles/cmTC_bb1f5.dir/CheckSymbolExists.c.o   -c /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c
/Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c:8:19: error: use of undeclared identifier 'CL_VERSION_2_0'
  return ((int*)(&CL_VERSION_2_0))[argc];
                  ^
1 error generated.
make[1]: *** [CMakeFiles/cmTC_bb1f5.dir/CheckSymbolExists.c.o] Error 1
make: *** [cmTC_bb1f5/fast] Error 2


File /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/cmake-build-debug/CMakeFiles/CMakeTmp/CheckSymbolExists.c:
/* */
#include </Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/OpenCL.framework/Headers/cl.h>

int main(int argc, char** argv)
{
  (void)argv;
#ifndef CL_VERSION_2_0
  return ((int*)(&CL_VERSION_2_0))[argc];
#else
  (void)argc;
  return 0;
#endif
}
